@@ -121,7 +121,7 @@ ACE_Read_Buffer::rec_read (int term, int search, int replace)
       // Check for possible substitutions.
       if (c == search)
         {
-          this->occurrences_++;
+          ++this->occurrences_;
 
           if (replace >= 0)
             c = replace;
@@ -141,7 +141,7 @@ ACE_Read_Buffer::rec_read (int term, int search, int replace)
   if (this->size_ == 0)
     return 0;
 
-  char *result;
+  char *result = 0;
 
   // Recurse, when the recursion bottoms out, allocate the result
   // buffer.
